// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentFlatAdapter dboToEntity given dbo with nulls, should return a PaymentFlatEntity with nulls 1`] = `
Object {
  "actionCode": "AC123",
  "actionLabel": "Label d'action Exemple",
  "activityCode": "AC456",
  "activityLabel": "Label d'activité Exemple",
  "amount": 1000,
  "attachementComptable": "BRET",
  "centreFinancierCode": "AA01/0776-C001-4000",
  "centreFinancierLibelle": "UO DGER XXXX-C001",
  "ej": "EJ Exemple",
  "exerciceBudgetaire": 2023,
  "idEntrepriseBeneficiaire": Siren {
    "siren": "123456789",
  },
  "idEtablissementBeneficiaire": Siret {
    "siret": "12345678901234",
  },
  "idVersement": "12345678901234-EJ Exemple-2023",
  "ministry": "Ministère Exemple",
  "ministryAcronym": null,
  "mission": "Mission Exemple",
  "operationDate": 2023-04-01T00:00:00.000Z,
  "programName": null,
  "programNumber": 1,
  "provider": "Fournisseur Exemple",
  "regionAttachementComptable": "Bretagne",
  "typeIdEntrepriseBeneficiaire": "siren",
  "typeIdEtablissementBeneficiaire": "siret",
  "uniqueId": "12345678901234-EJ Exemple-2023-1-AC123-AC456-1680307200000-BRET-AA01/0776-C001-4000",
}
`;

exports[`PaymentFlatAdapter dboToEntity given dbo without nulls, should return a PaymentFlatEntity without nulls 1`] = `
Object {
  "actionCode": "AC123",
  "actionLabel": "Label d'action Exemple",
  "activityCode": "AC456",
  "activityLabel": "Label d'activité Exemple",
  "amount": 1000,
  "attachementComptable": "BRET",
  "centreFinancierCode": "AA01/0776-C001-4000",
  "centreFinancierLibelle": "UO DGER XXXX-C001",
  "ej": "EJ Exemple",
  "exerciceBudgetaire": 2023,
  "idEntrepriseBeneficiaire": Siren {
    "siren": "123456789",
  },
  "idEtablissementBeneficiaire": Siret {
    "siret": "12345678901234",
  },
  "idVersement": "12345678901234-EJ Exemple-2023",
  "ministry": "Ministère Exemple",
  "ministryAcronym": "ME",
  "mission": "Mission Exemple",
  "operationDate": 2023-04-01T00:00:00.000Z,
  "programName": "Programme Exemple",
  "programNumber": 1,
  "provider": "Fournisseur Exemple",
  "regionAttachementComptable": "Bretagne",
  "typeIdEntrepriseBeneficiaire": "siren",
  "typeIdEtablissementBeneficiaire": "siret",
  "uniqueId": "12345678901234-EJ Exemple-2023-1-AC123-AC456-1680307200000-BRET-AA01/0776-C001-4000",
}
`;

exports[`PaymentFlatAdapter toDbo given entity with nulls, should return a PaymentFlatDbo with nulls 1`] = `
Object {
  "action": "Label d'action Exemple",
  "activite": "Label d'activité Exemple",
  "attachementComptable": "BRET",
  "codeAction": "0101-01-02",
  "codeActivite": "077601003222",
  "codeCentreFinancier": "AA01/0776-C001-4000",
  "dateOperation": 2023-07-12T00:00:00.000Z,
  "ej": "0001821732",
  "exerciceBudgetaire": 2023,
  "idEntrepriseBeneficiaire": "100000000",
  "idEtablissementBeneficiaire": "10000000000001",
  "idVersement": "ID_VERSEMENT",
  "libelleCentreFinancier": "UO DGER XXXX-C001",
  "ministere": "Ministère Exemple",
  "mission": "Mission Exemple",
  "montant": 89988.3,
  "numeroProgramme": 101,
  "programme": null,
  "provider": "chorus",
  "regionAttachementComptable": "Bretagne",
  "sigleMinistere": null,
  "typeIdEntrepriseBeneficiaire": "siren",
  "typeIdEtablissementBeneficiaire": "siret",
  "uniqueId": "UNIQUE_ID",
}
`;

exports[`PaymentFlatAdapter toDbo given entity without nulls, should return a PaymentFlatDbo without nulls 1`] = `
Object {
  "action": "Label d'action Exemple",
  "activite": "Label d'activité Exemple",
  "attachementComptable": "BRET",
  "codeAction": "0101-01-02",
  "codeActivite": "077601003222",
  "codeCentreFinancier": "AA01/0776-C001-4000",
  "dateOperation": 2023-07-12T00:00:00.000Z,
  "ej": "0001821732",
  "exerciceBudgetaire": 2023,
  "idEntrepriseBeneficiaire": "100000000",
  "idEtablissementBeneficiaire": "10000000000001",
  "idVersement": "ID_VERSEMENT",
  "libelleCentreFinancier": "UO DGER XXXX-C001",
  "ministere": "Ministère Exemple",
  "mission": "Mission Exemple",
  "montant": 89988.3,
  "numeroProgramme": 101,
  "programme": "Programme Exemple",
  "provider": "chorus",
  "regionAttachementComptable": "Bretagne",
  "sigleMinistere": "ME",
  "typeIdEntrepriseBeneficiaire": "siren",
  "typeIdEtablissementBeneficiaire": "siret",
  "uniqueId": "UNIQUE_ID",
}
`;

exports[`PaymentFlatAdapter toPayment should return partial Payment entity 1`] = `
Object {
  "activitee": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "chorus",
    "type": "string",
    "value": "Label d'activité Exemple",
  },
  "amount": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "chorus",
    "type": "number",
    "value": 89988.3,
  },
  "centreFinancier": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "chorus",
    "type": "string",
    "value": "UO DGER XXXX-C001",
  },
  "dateOperation": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "chorus",
    "type": "object",
    "value": 2023-07-12T00:00:00.000Z,
  },
  "domaineFonctionnel": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "chorus",
    "type": "string",
    "value": "Label d'action Exemple",
  },
  "ej": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "chorus",
    "type": "string",
    "value": "0001821732",
  },
  "libelleProgramme": undefined,
  "programme": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "chorus",
    "type": "number",
    "value": 101,
  },
  "siret": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "chorus",
    "type": "string",
    "value": "10000000000001",
  },
  "versementKey": Object {
    "last_update": 2023-07-12T00:00:00.000Z,
    "provider": "chorus",
    "type": "string",
    "value": "0001821732",
  },
}
`;
